--- a/tutorial008-AdvancedDataTypesContainers.ipynb
+++ b/tutorial008-AdvancedDataTypesContainers.ipynb
@@ -513,7 +513,8 @@
    "source": [
     "mylist.append(4) \n",
     "print(mylist)\n",
-    "type(mylist)"
+    "type(mylist)\n",
+    "."
    ]
   },
   {
@@ -543,7 +544,7 @@
    "source": [
     "mytuple = (1,2,3)\n",
     "print(mytuple)\n",
-    "type(mytuple)"
+    "type(mytuple)\n"
    ]
   },
   {
@@ -593,10 +594,10 @@
     "$\\color{blue}{\\text{Answer the following questions.}}$\n",
     "\n",
     "  - How many methods does a `Tuple` have?\n",
-    "  [Report your answer here]\n",
+    "  [2]\n",
     "  \n",
     "  - Which methods does a `List` have?\n",
-    "  [Report your answer here]\n",
+    "  [2]\n",
     "  "
    ]
   },
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "460998dd",
    "metadata": {},
    "outputs": [
@@ -620,7 +621,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C', 'D', 'A', 'B'}\n"
+      "{'B', 'C', 'D', 'A'}\n"
      ]
     },
     {
@@ -629,7 +630,7 @@
        "set"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,21 +651,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "c592826c",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (369283345.py, line 1)",
+     "evalue": "invalid syntax (3774391320.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [20]\u001b[0;36m\u001b[0m\n\u001b[0;31m    myset{1}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(myset{1})\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "myset{1}"
+    "print(myset{1})"
    ]
   },
   {
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "f0d4767c",
    "metadata": {},
    "outputs": [
@@ -772,7 +773,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C', 'D', 'A', 'B'}\n"
+      "{'B', 'C', 'D', 'A'}\n"
      ]
     }
    ],
@@ -828,26 +829,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "a8e73aa4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'union'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [29]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m mylist2 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m3.6\u001b[39m,\u001b[38;5;241m3.8\u001b[39m,\u001b[38;5;241m4.3\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m mylist3 \u001b[38;5;241m=\u001b[39m \u001b[43mmylist\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43munion\u001b[49m(mylist2)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(mylist3)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'union'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.6, 3.8, 4.3]\n"
      ]
     }
    ],
    "source": [
     "mylist2 = [3.6,3.8,4.3]\n",
-    "mylist3 = mylist.union(mylist2)\n",
-    "print(mylist3)"
+    "mylist3 = []\n",
+    "mylist3 = mylist3 + mylist2\n",
+    "print(mylist3)\n",
+    "\n",
+    "# We can concatonate lists via '+', union is not a list method"
    ]
   },
   {
@@ -867,25 +867,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "7ed0071f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.8, (6+1j), 8]\n",
-      "{3.5, 'A', 5}\n"
+      "[3.8, 'J', 8]\n",
+      "{3.5, 5, 'A'}\n"
      ]
     }
    ],
    "source": [
-    "myWonderList = [3.8, 6 +1j, 8]\n",
+    "myWonderList = [3.8, 'J', 8]\n",
     "print(myWonderList) \n",
     "\n",
     "myWonderset = {\"A\", 3.5, 5}\n",
-    "print(myWonderset)"
+    "print(myWonderset)\n",
+    "\n",
+    "# These two datas are similar, but they differ in their ordering because sets are unordered"
    ]
   },
   {
@@ -902,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "577551f4",
    "metadata": {},
    "outputs": [
@@ -919,7 +923,7 @@
        "dict"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,21 +1021,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "966bf323",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (251614571.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [21]\u001b[0;36m\u001b[0m\n\u001b[0;31m    home = [\"dogs\": 2 \"cat\": 1 \"fish\": 4]\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dogs', 2, 'cat', 1, 'fish', 4]\n"
      ]
     }
    ],
    "source": [
-    "home = [\"dogs\": 2 \"cat\": 1 \"fish\": 4]\n",
+    "home = [\"dogs\", 2, \"cats\", 1, \"fish\", 4]\n",
     "print(home)"
    ]
   },
@@ -1047,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "f479bf45",
    "metadata": {},
    "outputs": [
@@ -1055,12 +1058,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cats': 3, 'dogs': 4, 'birds': 2}\n"
+      "{'dogs': 2, 'cats': 1, 'fish': 4}\n"
      ]
     }
    ],
    "source": [
-    "home_dict = {\"cats\": 3, \"dogs\": 4, \"birds\": 2}\n",
+    "home_dict = {\"dogs\": 2, \"cats\": 1, \"fish\": 4}\n",
     "print (home_dict)"
    ]
   },
@@ -1076,24 +1079,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "6633a73e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'home' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m home_dict [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdogs\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m \u001b[43mhome\u001b[49m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdogs\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'home' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "home dogs: 2\n",
+      "home_dict dogs: 2\n"
      ]
     }
    ],
    "source": [
-    "home_dict [\"dogs\"]"
+    "print('home dogs: ' + str(home[1]))\n",
+    "print('home_dict dogs: ' + str(home_dict['dogs']))"
    ]
   },
   {
@@ -1103,7 +1104,7 @@
    "source": [
     " [Use this cell, to explain in your own words how you found the dog and the corresponding number of dogs in `home` first and in `home_dict` after that] \n",
     " \n",
-    " "
+    "# We have to scan the list in order to find the number of dogs associated with the word 'dogs', but the dictionary only requires me to call the key 'dogs'. It is much easier to use a dictionary in this example."
    ]
   },
   {
