just added t011 pt 2.

--- a/tutorial011-Numpy-Introduction.ipynb
+++ b/tutorial011-Numpy-Introduction.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "43a39707",
    "metadata": {},
    "outputs": [],
@@ -462,21 +462,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "a3b92752",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [25]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m mylistHomogeneous \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3.14\u001b[39m, \u001b[38;5;241m10.5\u001b[39m, \u001b[38;5;241m11.13\u001b[39m, \u001b[38;5;241m12.7\u001b[39m, \u001b[38;5;241m4.31\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m myArrFromList \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmylistHomogeneous\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m mylistHomogeneous \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3.14\u001b[39m, \u001b[38;5;241m10.5\u001b[39m, \u001b[38;5;241m11.13\u001b[39m, \u001b[38;5;241m12.7\u001b[39m, \u001b[38;5;241m4.31\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m myArrFromList \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39marray(mylistHomogeneous)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "f2284fad",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyArrFromList\u001b[49m\n",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyArrFromList\u001b[49m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'myArrFromList' is not defined"
      ]
     }
